; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_thinkpad_acpi.c_tpacpi_brightness_nvram_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_thinkpad_acpi.c_tpacpi_brightness_nvram_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@TP_NVRAM_ADDR_BRIGHTNESS = common dso_local global i32 0, align 4
@TP_NVRAM_MASK_LEVEL_BRIGHTNESS = common dso_local global i32 0, align 4
@TP_NVRAM_POS_LEVEL_BRIGHTNESS = common dso_local global i32 0, align 4
@tp_features = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @tpacpi_brightness_nvram_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tpacpi_brightness_nvram_get() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @TP_NVRAM_ADDR_BRIGHTNESS, align 4
  %3 = call i32 @nvram_read_byte(i32 %2)
  %4 = load i32, i32* @TP_NVRAM_MASK_LEVEL_BRIGHTNESS, align 4
  %5 = and i32 %3, %4
  %6 = load i32, i32* @TP_NVRAM_POS_LEVEL_BRIGHTNESS, align 4
  %7 = ashr i32 %5, %6
  store i32 %7, i32* %1, align 4
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tp_features, i32 0, i32 0), align 8
  %9 = icmp ne i64 %8, 0
  %10 = zext i1 %9 to i64
  %11 = select i1 %9, i32 15, i32 7
  %12 = load i32, i32* %1, align 4
  %13 = and i32 %12, %11
  store i32 %13, i32* %1, align 4
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @nvram_read_byte(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
